--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header>
                 <div class="contenido-header">
                     <div class = "audio">
-                        <audio src="img/Aqua - Barbie Girl (Official Music Video)_ZyhrYis509A.mp3" autoplay="autoplay" loop="true"></audio>
+                        <audio src="https://drive.google.com/file/d/1e7NLZjOi3qwFCTcTPOce7IJngboMoJNS/view?usp=drive_link" autoplay="autoplay" loop="true"></audio>
                     </div>
                     <h1>Programación</h1>
                     <nav id="nav" class="">
